##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = randepict
version = 1.0-dev

# Author information
author = Otto Brinkhaus
author_email = henning.brinkhaus@uni-jena.de
maintainer = Kohulan Rajan
maintainer_email = kohulan.rajan@uni-jena.de
url = 

# License information
license = MIT
license_file = LICENSE

[options]
install_requires =
    rdkit
    numpy
    scikit-image
    epam.indigo
    jpype1
    ipyplot

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    decimer = decimer.cli:main
